# warehouse_project

./: CMakeLists.txt  README.md
include/core/: Product.h  Stock.h  Supplier.h  User.h
include/documents/: Document.h  IncomingOperation.h  OutgoingOperation.h
include/services/: Logger.h  OrderCalculator.h  ReportGenerator.h
include/strategies/: AverageSalesStrategy.h  RecommendationStrategy.h
src/: main.cpp
src/core/: Product.cpp  Stock.cpp  Supplier.cpp  User.cpp
src/documents/: Document.cpp  IncomingOperation.cpp  OutgoingOperation.cpp
src/services/: Logger.cpp  OrderCalculator.cpp  ReportGenerator.cpp
src/strategies/: AverageSalesStrategy.cpp
tests/: CMakeLists.txt  test_incoming_operation.cpp  test_logger.cpp  test_order_calculator.cpp  test_outgoing_operation.cpp  test_product.cpp  test_report_generator.cpp  test_scenarios.cpp  test_stock.cpp  test_strategy.cpp  test_supplier.cpp  test_user.cpp
